Add content, base design

--- a/styles/_contact.less
+++ b/styles/_contact.less
@@ -1,3 +1,23 @@
-#skills {
-  background-color: @skillsColor;
+#contact {
+  background-color: @contactColor;
+  color: white;
+
+  h1 {
+    margin-top: 0;
+  }
+
+  a {
+    color: white;
+    text-decoration: none;
+    margin: 10px;
+  }
+
+  a:hover {
+    text-decoration: none;
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+  }
 }
