--- a/styles/main.less
+++ b/styles/main.less
@@ -3,6 +3,29 @@
 @skillsColor: #F2F2F2;
 @contactColor: #1D2026;
 
+// Skills
+@iterations: 10;
+@skillColors: #1cffc2 #00ffa6 #61d700 #00b202 #f7ff00 #ff9100 #ff00a6 #ff0000 #ff0000 #ff0000;
+
+html, body {
+  top: 0;
+  left: 0;
+  padding: 0;
+  margin: 0;
+  background: @contactColor;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+.container {
+  padding: 0;
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+}
+
 @import "_about.less";
 @import "_skills.less";
 @import "_contact.less";
