--- a/styles/_skills.less
+++ b/styles/_skills.less
@@ -1,3 +1,66 @@
 #skills {
   background-color: @skillsColor;
+  padding-bottom: 10px;
+
+  .skills-diagram {
+    .skill-loop (@i) when (@i > 0) {
+        .skill-@{i} {
+          width: ~"@{i}em";
+          height: ~"@{i}em";
+          line-height: ~"@{i}em";
+
+          background-color: fade(extract(@skillColors, ~"@{i}"), 30);
+          border-color: extract(@skillColors, ~"@{i}");
+          color: extract(@skillColors, ~"@{i}");
+        }
+        .skill-loop(@i - 1);
+    }
+    .skill-loop (@iterations);
+  }
+
+  .skills-diagram {
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    max-width: 35em;
+    margin: 2em auto 2em;
+  }
+  .skills-diagram > dd {
+    /* Hide inner attributes */
+    display: none;
+  }
+  .skills-diagram dt {
+    display: inline-block;
+    vertical-align: top;
+
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 50%;
+
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    transform: scale(1.2);
+
+    /* set defaults to skill-2 */
+    width: 2em;
+    height: 2em;
+    line-height: 2em;
+  }
+
+  .skills-diagram dt:hover {
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -o-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+  }
+
+  /* Support vertical mode */
+  .skills-diagram-vertical dt {
+    display: block;
+    /* .25em is an equivalent to inline-block's horizontal whitespace margin */
+    margin: .25em auto;
+  }
 }
