--- a/styles/_about.less
+++ b/styles/_about.less
@@ -1,4 +1,16 @@
 #about {
   background-color: @aboutColor;
   padding-bottom: 10px;
+
+  header{
+    text-align: center;
+    margin: 3% 0 7%;
+    i{
+      font-size: 6em;
+    }
+    h1{
+      margin-top: .2em;
+      font-size: 2em;
+    }
+  }
 }
