--- a/styles/main.less
+++ b/styles/main.less
@@ -13,12 +13,23 @@ html, body {
   padding: 0;
   margin: 0;
   background: @contactColor;
+  color: @contactColor;
+  font-family: "open sans";
 }
 
 h1 {
-  margin-top: 0;
+  margin-top: 10px;
 }
 
+section, footer{
+  display: inline-block;
+  width: 80%;
+  padding: 0 10%;
+  @media (max-width:768px) {
+    width: 94%;
+    padding: 0 3%;
+  }
+}
 .container {
   padding: 0;
   text-align: center;
