Change skills color//clean

--- a/styles/_contact.less
+++ b/styles/_contact.less
@@ -2,10 +2,6 @@
   background-color: @contactColor;
   color: white;
 
-  h1 {
-    margin-top: 0;
-  }
-
   a {
     color: white;
     text-decoration: none;
@@ -14,10 +10,15 @@
 
   a:hover {
     text-decoration: none;
+    color: orange;
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
     -o-transform: scale(1.2);
     -ms-transform: scale(1.2);
     transform: scale(1.2);
+  }
+
+  a, a:hover {
+    transition: all 200ms;
   }
 }
