--- a/styles/main.less
+++ b/styles/main.less
@@ -5,7 +5,7 @@
 
 // Skills
 @iterations: 10;
-@skillColors: #1cffc2 #00ffa6 #61d700 #00b202 #f7ff00 #ff9100 #ff00a6 #ff0000 #ff0000 #ff0000;
+@skillColors: #C99B81 #C99B81 #E5CC3B #EA7061 #6772E1 #15E667 #A5704F #15E667 #E15D51 #26ACAE;
 
 html, body {
   top: 0;
@@ -14,14 +14,16 @@ html, body {
   margin: 0;
   background: @contactColor;
   color: @contactColor;
-  font-family: "open sans";
+  font-family: "Open Sans";
 }
 
 h1 {
+  font-size: 2.2em;
   margin-top: 10px;
 }
 
-section, footer{
+section, footer {
+  text-align: center;
   display: inline-block;
   width: 80%;
   padding: 0 10%;
