media-query screen

--- a/styles/_skills.less
+++ b/styles/_skills.less
@@ -1,6 +1,7 @@
 #skills {
   background-color: @skillsColor;
   padding-bottom: 10px;
+  border-top: 1px solid #eee;
 
   .skills-diagram {
     .skill-loop (@i) when (@i > 0) {
