--- a/styles/_about.less
+++ b/styles/_about.less
@@ -4,12 +4,15 @@
 
   header{
     text-align: center;
-    margin: 3% 0 7%;
-    i{
-      font-size: 6em;
+    margin: 3% 0 5%;
+    >img{
+      width: 150px;
+      height: 150px;
+      border-radius: 77px;
+      border: 4px solid @contactColor;
     }
-    h1{
-      margin-top: .2em;
+    >h1{
+      margin: .2em;
       font-size: 2em;
     }
   }
